--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lecuirot</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      max-width: 700px;
-      margin: 4rem auto;
-      padding: 0 1rem;
-      line-height: 1.6;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Lecuirot</h1>
-  <p>Information coming soon.</p>
-  <p>Contact: <a href="mailto:you@example.com">you@example.com</a></p>
+  <main class="container">
+    <h1>Lecuirot</h1>
+    <p id="tagline">Information coming soon.</p>
+
+    <button id="cta">Click me</button>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
