--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lecuirot</title>
+  <title>James Le Cuirot</title>
   <meta name="description" content="Personal landing page." />
 
   <link rel="stylesheet" href="style.css" />
@@ -13,7 +13,7 @@
 
   <header class="header">
     <div class="container header-inner">
-      <a class="brand" href="#top" aria-label="Homepage">Lecuirot</a>
+      <a class="brand" href="#top" aria-label="Homepage">James Le Cuirot</a>
 
       <nav class="nav" aria-label="Primary">
         <a href="#about">About</a>
