--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="hero-text">
           <p class="eyebrow">Personal landing page</p>
           <h1 class="title">
-            A simple home for <span class="grad">who I am</span> and how to reach me.
+            I am a <span class="grad">commercial pilot</span> & <span class="grad">safety consultant</span> based in Jersey.
           </h1>
           <p class="lead">
             Replace this text with a short one-liner about you — what you do, what you care about,
