--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
         <div class="hero-text">
           <p class="eyebrow">Personal landing page</p>
           <h1 class="title">
-            I am a <span class="grad">commercial pilot</span> & <span class="grad">safety consultant</span> based in Jersey.
+            I am a <span class="grad">commercial pilot</span> & <span class="grad">human factors specialist</span> based in Jersey.
           </h1>
           <p class="lead">
-            Replace this text with a short one-liner about you — what you do, what you care about,
-            or what you're building.
+            I help organisations understand why intelligent, capable people make errors — and how to design systems that are safer, clearer, and more resilient.
           </p>
 
           <div class="cta-row">
