--- a/index.html
+++ b/index.html
@@ -87,15 +87,23 @@
         <div class="grid">
           <div class="tile">
             <h3>What I do</h3>
-            <p>One sentence about your work or interests.</p>
+            <p>I work with organisations to:
+
+Analyse safety events and uncover systemic contributors
+
+Improve reporting and learning systems
+
+Strengthen safety culture
+
+Design procedures that account for real human behaviour
+
+Integrate human factors into governance and policy
+
+My approach combines operational experience with academic rigour — ensuring recommendations are both theoretically sound and practically viable.</p>
           </div>
           <div class="tile">
             <h3>What I’m building</h3>
             <p>One sentence about current projects.</p>
-          </div>
-          <div class="tile">
-            <h3>What I’m learning</h3>
-            <p>One sentence about growth areas.</p>
           </div>
         </div>
       </div>
