--- a/index.html
+++ b/index.html
@@ -80,8 +80,13 @@
       <div class="container">
         <h2>About</h2>
         <p>
-          Add a short paragraph about yourself here. Keep it human: what you do, what you’re into,
-          and what you’re working on.
+          I was born and educated in Jersey before leaving to complete commercial pilot training, qualifying in 2020.
+
+After returning to Jersey, I worked as a pilot while completing a Master’s degree in Human Factors, graduating with Distinction in 2022.
+
+My experience spans aviation, regulatory environments, and safety-critical industries. I am an associate member of the Royal Aeronautical Society, a member of the European Association for Aviation Psychologists, and the International Institute of Risk and Safety Management.
+
+My work focuses on making human factors accessible, practical, and impactful beyond aviation.
         </p>
 
         <div class="grid">
