--- a/index.html
+++ b/index.html
@@ -93,17 +93,13 @@ My work focuses on making human factors accessible, practical, and impactful bey
           <div class="tile">
             <h3>What I do</h3>
             <p>I work with organisations to:
-
-Analyse safety events and uncover systemic contributors
-
-Improve reporting and learning systems
-
-Strengthen safety culture
-
-Design procedures that account for real human behaviour
-
-Integrate human factors into governance and policy
-
+              <ul>
+                <li>Analyse safety events and uncover systemic contributors</li>
+                <li>Improve reporting and learning systems</li>
+                <li>Strengthen safety culture</li>
+                <li>Design procedures that account for real human behaviour</li>
+                <li>Integrate human factors into governance and policy</li>
+               </ul>
 My approach combines operational experience with academic rigour — ensuring recommendations are both theoretically sound and practically viable.</p>
           </div>
           <div class="tile">
