--- a/index.html
+++ b/index.html
@@ -79,34 +79,103 @@
     <section class="section" id="about">
       <div class="container">
         <h2>About</h2>
+
+        <h3>Clear Thinking in Complex Systems</h3>
         <p>
-          I was born and educated in Jersey before leaving to complete commercial pilot training, qualifying in 2020.
-
-After returning to Jersey, I worked as a pilot while completing a Master’s degree in Human Factors, graduating with Distinction in 2022.
-
-My experience spans aviation, regulatory environments, and safety-critical industries. I am an associate member of the Royal Aeronautical Society, a member of the European Association for Aviation Psychologists, and the International Institute of Risk and Safety Management.
-
-My work focuses on making human factors accessible, practical, and impactful beyond aviation.
+          In safety-critical environments, mistakes are rarely caused by incompetence. They are the predictable result of system design, cognitive load, fatigue, organisational culture, and competing priorities.
+        </p>
+        <p>
+          I help organisations understand why intelligent, capable people make errors — and how to design systems that are safer, clearer, and more resilient.
+        </p>
+        <p>
+          With a background in aviation, advanced training in Human Factors, and experience across regulated industries, I specialise in translating complex behavioural science into practical, operational change.
         </p>
 
-        <div class="grid">
-          <div class="tile">
-            <h3>What I do</h3>
-            <p>I work with organisations to:
-              <ul>
-                <li>Analyse safety events and uncover systemic contributors</li>
-                <li>Improve reporting and learning systems</li>
-                <li>Strengthen safety culture</li>
-                <li>Design procedures that account for real human behaviour</li>
-                <li>Integrate human factors into governance and policy</li>
-               </ul>
-My approach combines operational experience with academic rigour — ensuring recommendations are both theoretically sound and practically viable.</p>
-          </div>
-          <div class="tile">
-            <h3>What I’m building</h3>
-            <p>One sentence about current projects.</p>
-          </div>
-        </div>
+        <hr />
+
+        <h3>What I do</h3>
+
+        <h4>Human Factors Training</h4>
+        <p>
+          Evidence-based, engaging training designed for real-world application — not tick-box compliance.
+        </p>
+        <p><strong>Topics include:</strong></p>
+        <ul>
+          <li>Fundamentals of Human Factors</li>
+          <li>Non-Technical Skills (NTS)</li>
+          <li>Cognitive Load &amp; Decision-Making</li>
+          <li>Human Error &amp; Just Culture</li>
+          <li>Fatigue &amp; Performance</li>
+          <li>Safety Culture &amp; Reporting Systems</li>
+        </ul>
+        <p>
+          Each session is designed to be practical, scenario-based, and immediately applicable.
+        </p>
+
+        <hr />
+
+        <h4>Consultancy &amp; Advisory</h4>
+        <p>I work with organisations to:</p>
+        <ul>
+          <li>Analyse safety events and uncover systemic contributors</li>
+          <li>Improve reporting and learning systems</li>
+          <li>Strengthen safety culture</li>
+          <li>Design procedures that account for real human behaviour</li>
+          <li>Integrate human factors into governance and policy</li>
+        </ul>
+        <p>
+          My approach combines operational experience with academic rigour — ensuring recommendations are both theoretically sound and practically viable.
+        </p>
+
+        <hr />
+
+        <h3>Why Human Factors Matters</h3>
+        <p>
+          In aviation, we learned that blaming individuals does not improve safety.
+        </p>
+        <p>
+          The same principles apply in healthcare, finance, public policy, and emerging technologies.
+        </p>
+        <p><strong>When systems ignore human limitations:</strong></p>
+        <ul>
+          <li>Errors increase</li>
+          <li>Reporting decreases</li>
+          <li>Risk becomes normalised</li>
+          <li>Trust erodes</li>
+        </ul>
+        <p><strong>When systems are designed around how people actually think and perform:</strong></p>
+        <ul>
+          <li>Safety improves</li>
+          <li>Performance improves</li>
+          <li>Culture strengthens</li>
+          <li>Organisations become more resilient</li>
+        </ul>
+
+        <hr />
+
+        <h3>About Me</h3>
+        <p>
+          I was born and educated in Jersey before leaving to complete commercial pilot training, qualifying in 2020.
+        </p>
+        <p>
+          After returning to Jersey, I worked as a pilot while completing a Master’s degree in Human Factors, graduating with Distinction in 2022.
+        </p>
+        <p>
+          My experience spans aviation, regulatory environments, and safety-critical industries. I am an associate member of the Royal Aeronautical Society, a member of the European Association for Aviation Psychologists, and the International Institute of Risk and Safety Management.
+        </p>
+        <p>
+          My work focuses on making human factors accessible, practical, and impactful beyond aviation.
+        </p>
+
+        <h3>Who I work with</h3>
+        <ul>
+          <li>Aviation organisations</li>
+          <li>Healthcare organisations</li>
+          <li>Regulators and public bodies</li>
+          <li>Financial service providers</li>
+          <li>Safety-critical industries</li>
+          <li>Leadership teams seeking to improve decision-making and risk management</li>
+        </ul>
       </div>
     </section>
 
