--- a/index.html
+++ b/index.html
@@ -217,16 +217,15 @@
         <h2>Contact</h2>
         <p>
           The easiest way to reach me:
-          <a class="inline" id="emailLink" href="mailto:you@example.com">you@example.com</a>
+          <a class="inline" id="emailLink" href="mailto:james@lecuirot.je">James@LeCuirot.je</a>
         </p>
 
         <div class="contact-row">
-          <a class="button primary" id="emailButton" href="mailto:you@example.com">Email me</a>
+          <a class="button primary" id="emailButton" href="mailto:james@lecuirot.je">Email me</a>
           <button class="button" id="copyEmailBtn2" type="button">Copy email</button>
         </div>
 
         <p class="fine muted">
-          Tip: Replace <code>you@example.com</code> (in index.html and script.js) with your real email.
         </p>
       </div>
     </section>
@@ -234,7 +233,7 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <p class="muted">© <span id="year"></span> Lecuirot</p>
+      <p class="muted">© <span id="year"></span> Le Cuirot</p>
       <a class="muted inline" href="#top">Back to top</a>
     </div>
   </footer>
