--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
               <p class="card-label">Quick info</p>
               <ul class="card-list">
                 <li><span>Location</span><span>Jersey</span></li>
-                <li><span>Focus</span><span>Your focus</span></li>
-                <li><span>Status</span><span>Available / Busy</span></li>
+                <li><span>Focus</span><span>Aviation</span></li>
+                <li><span>Status</span><span>Available / <s>Busy</s></span></li>
               </ul>
               <p class="card-note">
               </p>
